# CW2-Simplify

./: Expr.hs  Poly.hs  README.md  Simplify.cabal  Simplify.hs
test/: SimplifyTest.hs
